--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="en">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145161862-3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-145161862-3');
+    </script>
+
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Frequently asked questions about a shitty medical condition. Fructose malabsorption occurs when your body is unable to digest the sugar fructose.">
   <meta name="keywords" content="fructose, malabsorption">
