--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <div>
                 <h2>🩹What's the treatment?</h2>
-                <p>As of 2020, there is no cure but it can be managed by strictly following a low- or no-fructose diet, and taking a xylose isomerase enzyme before a meal containing fructose. Brand names for xylose isomerase are <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">Fructaid</a> and <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">Lutomerase</a>.</p>
+                <p>As of 2020, there is no cure but it can be managed by strictly following a low- or no-fructose diet, and taking a xylose isomerase enzyme before a meal containing fructose. Brand names for xylose isomerase are <a href="https://amzn.to/2VSVG8y" target="_blank">Fructaid</a> and <a href="http://rover.ebay.com/rover/1/711-53200-19255-0/1?ff3=4&pub=5575585655&toolid=10001&campid=5338680335&customid=&mpre=https%3A%2F%2Fwww.ebay.com%2Fitm%2FLutomerase-108-capsules-Fructose-intolerance-malabsorption-Xylose-Isomerase%2F252926486520" target="_blank">Lutomerase</a>.</p>
             </div>
 
             <div>
