Updated About author text

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
         <div class="author-box">
             <h2>About the Author</h2>
-            <p>David is a fructose malabsorption sufferer and changed his major to molecular biology during graduate school because of it. Now he is studying absorption and metabolism of fructose to identify the gene or genes that may be responsible for the development of fructose malabsorption.</p>
+            <p>Inspired by the millionth fructose-induced diarrhea, David changed his major to molecular biology during graduate school. Now he is studying absorption and metabolism of fructose to identify the gene or genes that may be responsible for the development of fructose malabsorption.</p>
         </div>
     </div> <!-- end of content -->
 
