--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="grid">
             <div>
                 <h2>🍏What is fructose?</h2>
-                <p>Fructose is a naturally occurring simple sugar. You can find it in fruit, hence the name fructose, vegetables, or honey. Fructose also makes up 50% of table sugar, sucrose, the other half being another simple sugar, glucose.</p>
+                <p><a href="https://en.m.wikipedia.org/wiki/Fructose" target="_blank">Fructose</a> is a naturally occurring simple sugar. You can find it in fruit, hence the name fructose, vegetables, or honey. Fructose also makes up 50% of table sugar, sucrose, the other half being another simple sugar, glucose.</p>
             </div>
 
             <div>
                 <h2>🧨What is fructose malabsorption?</h2>
-                <p>FM occurs when your body <a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">isn't able to absorb fructose</a> in the small intestine and send it to the liver. Instead, fructose stays in the gut where it is not supposed to be and gets fermented by your gut microbiota. That disrupts the normal digestive process.</p>
+                <p><a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">FM</a> occurs when your body isn't able to absorb fructose in the small intestine and send it to the liver. Instead, fructose stays in the gut where it is not supposed to be and gets fermented by your gut microbiota. That disrupts the normal digestive process.</p>
             </div>
 
             <div>
@@ -48,7 +48,7 @@
 
             <div>
                 <h2>🔬How do I get tested?</h2>
-                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose solution, breath every 15 minutes into a plastic bag for 4 hours, discuss results. It is normal if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth" target="_blank">small intestinal bacterial overgrowth</a>, is found along with FM.</p>
+                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose solution, breath every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth" target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
             </div>
 
             <div>
@@ -68,7 +68,7 @@
 
             <div>
                 <h2>🍪Can I eat sweet things?</h2>
-                <p>Yes, but only those sweetened with glucose = dextrose, lactose, monk fruit extract, not with fructose, sucrose = table sugar, honey, high fructose corn syrup.</p>
+                <p>Yes, but only those sweetened with glucose = dextrose, lactose, monk fruit extract, not with fructose, sucrose = table sugar, honey, high fructose corn syrup, which all contain fructose.</p>
             </div>
 
             <div>
@@ -78,12 +78,12 @@
 
             <div>
                 <h2>🧬Is it genetic?</h2>
-                <p>There is anecdotal evidence fructose malabsorption runs in families, often undiagnosed. However, the origin of FM remains unresolved.</p>
+                <p>There is anecdotal evidence fructose malabsorption runs in families, often undiagnosed. However, the origin of FM remains unresolved and more research is needed to better understand its causes.</p>
             </div>
 
             <div>
                 <h2>🧐Is fructose malabsorption fructose intolerance?</h2>
-                <p>Fructose intolerance usually refers to <a href="https://en.m.wikipedia.org/wiki/Hereditary_fructose_intolerance" target="_blank">Hereditary fructose intolerance</a>, which is a separate condition from fructose malabsorption. HFI is caused by mutations in the gene that codes for the enzyme aldolase B. This enzyme metabolizes fructose in the liver rather than in the small intestine.</p>
+                <p>Fructose intolerance usually refers to <a href="https://en.m.wikipedia.org/wiki/Hereditary_fructose_intolerance" target="_blank">Hereditary fructose intolerance</a>, which is a separate condition from <a href="https://en.m.wikipedia.org/wiki/Fructose_malabsorption" target="_blank">fructose malabsorption</a>. HFI is caused by mutations in the gene that codes for the enzyme aldolase B. This enzyme metabolizes fructose in the liver rather than in the small intestine.</p>
             </div>
 
             <div>
