Added new content
Added two more questions

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
             <div>
                 <h2>💩What are the symptoms?</h2>
-                <p>Diarrhea or at least loose stools, gas, bloating, chronic fatigue, nutritional deficiencies, possibly depression.</p>
+                <p>Diarrhea or at least loose stools, gas, bloating, abdominal pain, chronic fatigue, nutritional deficiencies, possibly depression.</p>
             </div>
 
             <div>
                 <h2>🔬How do I get tested?</h2>
-                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose solution, breath every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth" target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
+                <p>With a <a href="https://en.m.wikipedia.org/wiki/Hydrogen_breath_test" target="_blank">hydrogen breath test</a>. Procedure: Arrive on empty stomach, brush teeth at doctor's office, drink fructose solution, breathe every 15 minutes into a plastic bag for 4 hours, discuss results. Don't get surprised if SIBO, <a href="https://en.m.wikipedia.org/wiki/Small_intestinal_bacterial_overgrowth" target="_blank">small intestinal bacterial overgrowth</a>, is diagnosed along with FM.</p>
             </div>
 
             <div>
@@ -58,17 +58,27 @@
 
             <div>
                 <h2>🥄What can I eat?</h2>
-                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of foods and their fructose content. For instance <a href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash University FODMAP Diet</a>. A lesser known option that is safe is to get nutritionally complete powder food. For example Super Body Fuel (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other brands</a>, be sure to check their list of ingredients.</p>
+                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of foods and their fructose content. For instance <a href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete powder food. For example Super Body Fuel (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other brands</a>, be sure to check their list of ingredients.</p>
             </div>
 
             <div>
                 <h2>🧅Anything else to avoid besides fructose?</h2>
-                <p>Yes, the general advice is to minimize or eliminate fructans and polyols. However, test the degree of your personal sensitivity. <a href="https://en.m.wikipedia.org/wiki/Fructan" target="_blank">Fructans</a> are chains of fructose molecules and are mainly found in garlic, onion, and wheat. <a href="https://en.m.wikipedia.org/wiki/Polyol" target="_blank">Polyols</a> are sugar alcohols and include sorbitol, maltitol, xylitol, erythritol, isomalt.</p>
+                <p>Yes, the general advice is to minimize or eliminate fructans and polyols. However, test the degree of your individual sensitivity. <a href="https://en.m.wikipedia.org/wiki/Fructan" target="_blank">Fructans</a> are chains of fructose molecules and are mainly found in garlic, onion, and wheat. <a href="https://en.m.wikipedia.org/wiki/Polyol" target="_blank">Polyols</a> are sugar alcohols and include sorbitol, mannitol, maltitol, xylitol, erythritol, isomalt.</p>
             </div>
 
             <div>
                 <h2>🍪Can I eat sweet things?</h2>
                 <p>Yes, but only those sweetened with glucose = dextrose, lactose, monk fruit extract, not with fructose, sucrose = table sugar, honey, high fructose corn syrup, which all contain fructose.</p>
+            </div>
+
+            <div>
+                <h2>🍞Do I need to go gluten-free?</h2>
+                <p>No, unless you are a <a href="https://en.m.wikipedia.org/wiki/Coeliac_disease" target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption. While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing grains, like oats, are safe.</p>
+            </div>
+
+            <div>
+                <h2>🍚What is a low FODMAP diet?</h2>
+                <p>The acronym stands for <a href="https://en.m.wikipedia.org/wiki/FODMAP" target="_blank">Fermentable Oligo-, Di-, Mono-saccharides And Polyols</a>, and the diet is recommended to IBS sufferers. Saccharide means carbohydrate and the prefixes refer to the number of sugar units – few, two, one – in one molecule of the saccharide. For fructose malabsorbers, the <a href="https://en.m.wikipedia.org/wiki/Low-FODMAP_diet" target="_blank">low FODMAP diet</a> is overly restrictive as it advises against dairy products like yogurt, milk, and soft cheese due to the disaccharide lactose.</p>
             </div>
 
             <div>
