Added hyperlink to SBF

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <div>
                 <h2>🥄What can I eat?</h2>
-                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of foods and their fructose content. For instance <a href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete powder food. For example Super Body Fuel (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other brands</a>, be sure to check their list of ingredients.</p>
+                <p>One of the best strategies, besides seeing a specialist, is to get a mobile app with a database of foods and their fructose content. For instance <a href="https://www.baliza.de/en/apps/histamine.html" target="_blank">Food Intolerances</a> or <a href="https://www.monashfodmap.com/ibs-central/i-have-ibs/get-the-app/" target="_blank">Monash University FODMAP Diet</a>. A lesser-known option that is safe is to get nutritionally complete powder food. For example <a href="https://superbodyfuel.com/" target="_blank">Super Body Fuel</a> (except for strawberry flavor). For <a href="https://www.blendrunner.com/" target="_blank">other brands</a>, be sure to check their list of ingredients.</p>
             </div>
 
             <div>
