Updated answer to "Can I eat sweet things?"
Based on feedback from Judith (FB).

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
             <div>
                 <h2>🍪Can I eat sweet things?</h2>
-                <p>Yes, but only those sweetened with glucose = dextrose, lactose, monk fruit extract, not with fructose, sucrose = table sugar, honey, high fructose corn syrup, which all contain fructose.</p>
+                <p>Yes, but only those sweetened with glucose ie. dextrose, lactose, monk fruit extract. Avoid foods sweetened with fructose, table sugar ie. sucrose, honey, high fructose corn syrup, which all contain fructose. This is not an exhaustive list, check your fructose diet mobile app.</p>
             </div>
 
             <div>
