Updated answer to "Do I need to go gluten-free?"

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             <div>
                 <h2>🍞Do I need to go gluten-free?</h2>
-                <p>No, unless you are a <a href="https://en.m.wikipedia.org/wiki/Coeliac_disease" target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption. While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing grains, like oats, are safe.</p>
+                <p>No, unless you are a <a href="https://en.m.wikipedia.org/wiki/Coeliac_disease" target="_blank">celiac</a> or have a gluten sensitivity unrelated to fructose malabsorption. While the protein <a href="https://en.m.wikipedia.org/wiki/Gluten" target="_blank">gluten</a> itself is not an issue for fructose malabsorbers, wheat does contain fructans. Some gluten-containing grains, like oats, which contain gluten due to facility cross-contamination, are safe.</p>
             </div>
 
             <div>
