Updated "What are the symptoms?"

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <div>
                 <h2>💩What are the symptoms?</h2>
-                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, nutritional deficiencies, possibly depression.</p>
+                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional deficiencies, possibly depression. Some also report constipation.</p>
             </div>
 
             <div>
