--- a/index.html
+++ b/index.html
@@ -25,9 +25,14 @@
 
 <body>
     <div class="content">
+
         <div class="header">
-            <h1>Fructose Malabsorption FAQ</h1>
-            <p><i>Frequently asked questions about a shitty medical condition</i></p>
+            <div>
+                <h1>Fructose<br>Malabsorption<br>FAQ</h1>
+                <p><i>Frequently asked questions<br>about a shitty medical condition</i></p>
+                <p class="caption">Illustration adapted from <a href="https://www.amandaoleander.com/" target="_blank">Amanda Oleander</a></p>
+            </div>
+            <img src="img/boy-or-girl.svg" alt="A woman asks another person who looks pregnant: A boy or girl? The person replies: Just gas!" class="hero-img">
         </div>
 
         <div class="grid">
@@ -111,7 +116,7 @@
                 <p>Inspired by the millionth fructose-induced diarrhea, David changed his major to molecular biology during graduate school. Now he is studying absorption and metabolism of fructose to identify the gene or genes that may be responsible for the development of fructose malabsorption.</p>
             </div>
 
-            <img src="img/memoji.png" alt="David Memoji" class="memoji">
+            <img src="img/memoji.png" alt="Author Memoji" class="memoji">
         </div>
 
     </div> <!-- end of content -->
