--- a/index.html
+++ b/index.html
@@ -27,9 +27,11 @@
     <div class="content">
 
         <div class="header">
-            <div>
-                <h1>Fructose<br>Malabsorption<br>FAQ</h1>
-                <p><i>Frequently asked questions<br>about a shitty medical condition</i></p>
+            <div class="title">
+                <div>
+                    <h1>Fructose<br>Malabsorption<br>FAQ</h1>
+                    <p><i>Frequently asked questions<br>about a shitty medical condition</i></p>
+                </div>
                 <p class="caption">Illustration adapted from <a href="https://www.amandaoleander.com/" target="_blank">Amanda Oleander</a></p>
             </div>
             <img src="img/boy-or-girl.svg" alt="A woman asks another person who looks pregnant: A boy or girl? The person replies: Just gas!" class="hero-img">
