--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <div>
                 <h2>💩 What are the symptoms?</h2>
-                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional deficiencies, possibly depression. Some also report constipation.</p>
+                <p>Diarrhea or loose stools, gas, bloating, abdominal pain, chronic fatigue, headaches, nutritional deficiencies, possibly depression.</p>
             </div>
 
             <div>
