--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
     <footer>
         <p>© 2020—Present. Buy <a href="https://www.dnarna.co" target="_blank">me</a> a
-            cup of <a href="https://ko-fi.com/davbl" target="_blank">coffee</a> :)</p>
+            cup of <a href="https://ko-fi.com/davbl" target="_blank">coffee</a> ☕️</p>
     </footer>
 
 </body>
