Replace github feedback with a google form

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
         </div> <!-- end of grid -->
 
-        <p class="github"><a href="https://github.com/akuataya/fmfaq/issues" target="_blank">+ Suggest a new
+        <p class="feedback"><a href="https://forms.gle/hWamKJWPEJsEjBPe9" target="_blank">+ Suggest a new
                 question, or tell me what to improve</a></p>
 
         <div class="author-box">
