Convert memoji png to avif

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                     gene or genes that may be responsible for the development of fructose malabsorption.</p>
             </div>
 
-            <img src="img/memoji.png" alt="Memoji of the site's author" class="memoji">
+            <img src="img/memoji.avif" alt="Memoji of the site's author" class="memoji">
         </div>
 
     </main>
